; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_set_download_rate_limit.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_set_download_rate_limit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@seaf = common dso_local global %struct.TYPE_5__* null, align 8
@KEY_DOWNLOAD_LIMIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seafile_set_download_rate_limit(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %7, %2
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  store i32 %9, i32* %13, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %15 = load i32, i32* @KEY_DOWNLOAD_LIMIT, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @seafile_session_config_set_int(%struct.TYPE_5__* %14, i32 %15, i32 %16)
  ret i32 %17
}

declare dso_local i32 @seafile_session_config_set_int(%struct.TYPE_5__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
